<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/baseLayout.withPadding"
              xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/reg_usercomu_vivienda_rot"
        style="@style/textBase.textPageLabel1"
        android:text="@string/reg_usercomu_vivienda_rot"
    />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <EditText
            android:id="@+id/reg_usercomu_portal_ed"
            style="@style/textBase.editField"
            android:hint="@string/reg_usercomu_portal_hint"
            android:inputType="textCapWords"
            android:maxEms="10"
            android:layout_weight="1"
            android:gravity="center"
        />

        <EditText
            android:id="@+id/reg_usercomu_escalera_ed"
            style="@style/textBase.editField"
            android:hint="@string/reg_usercomu_escalera_hint"
            android:inputType="textCapWords"
            android:maxEms="10"
            android:layout_weight="1"
            android:gravity="center"
        />

        <EditText
            android:id="@+id/reg_usercomu_planta_ed"
            style="@style/textBase.editField"
            android:hint="@string/reg_usercomu_planta_hint"
            android:inputType="textCapWords"
            android:maxEms="10"
            android:layout_weight="1"
            android:gravity="center"
        />

        <EditText
            android:id="@+id/reg_usercomu_puerta_ed"
            style="@style/textBase.editField"
            android:hint="@string/reg_usercomu_puerta_hint"
            android:inputType="textCapWords"
            android:maxEms="10"
            android:layout_weight="1"
            android:gravity="center"
        />
    </LinearLayout>


    <TextView
        android:id="@+id/reg_usercomu_roles_checkbox_rot"
        style="@style/textBase.textPageLabel1"
        android:text="@string/reg_usercomu_role_checkbox_rot"
    />

    <GridLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
    >
        <CheckBox
            android:id="@+id/reg_usercomu_checbox_pre"
            style="@style/textBase.textFieldLabel2"
            android:text="@string/reg_usercomu_checkbox_pre_rot"
            android:background="@color/transparent"
        />

        <CheckBox
            android:id="@+id/reg_usercomu_checbox_admin"
            style="@style/textBase.textFieldLabel2"
            android:text="@string/reg_usercomu_checbox_admin_rot"
            android:background="@color/transparent"
        />

        <CheckBox
            android:id="@+id/reg_usercomu_checbox_pro"
            style="@style/textBase.textFieldLabel2"
            android:text="@string/reg_usercomu_checbox_pro_rot"
            android:background="@color/transparent"
        />

        <CheckBox
            android:id="@+id/reg_usercomu_checbox_inq"
            style="@style/textBase.textFieldLabel2"
            android:text="@string/reg_usercomu_checbox_inq_rot"
            android:background="@color/transparent"
        />
    </GridLayout>

</LinearLayout>